fix issue verify password by login
